## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	add-point.xpm		\
	anim-preview.xpm	\
	clear-all-points.xpm	\
	delete-all-points.xpm	\
	delete-point.xpm	\
	first-point.xpm		\
	next-point.xpm		\
	prev-point.xpm		\
	rotate-follow.xpm	\
	source-image.xpm	\
	stepmode.xpm		\
	delete.xpm	\
	duplicate.xpm	\
	first.xpm	\
	last.xpm	\
	next.xpm	\
	play.xpm	\
	prev.xpm	\
	update.xpm

